styles/styles.css
* {
  box-sizing: border-box;
  font-family: 'Lobster', cursive, sans-serif;
}

h1 {
  text-align: center;
  font-size: 4rem;
  margin-top: 1rem;
  margin-bottom: 3rem;
}

.main-container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap-reverse;
}

.canvas-container {
  display: flex;
  flex-direction: column;
  flex: 1;
  max-width: 605px;
  margin: 0 0.5rem;
}

.canvas {
  box-sizing: content-box;
  border-bottom: 1px solid black;
  border-right: 1px solid black;
  min-width: 470px;
  aspect-ratio: 1/1;
  display: flex;
  flex-wrap: wrap;
  /* Removes 1 pixel gaps on canvas edges that appear at certain block sizes */
  justify-content: flex-end;
  align-content: flex-end;
}

.canvas div {
  border-left: 1px solid black;
  border-top: 1px solid black;
}

.grid-size,
.slide-container,
.slider-value {
  width: 200px;
  align-self: center;
  text-align: center;
}

.slider {
  cursor: pointer;
}

.controls-container {
  display: flex;
  flex-direction: column;
  max-width: 200px;
  min-width: 120px;
  flex: 1;
  margin-right: 2rem;
  margin-left: 0.5rem;
  justify-content: center;
}

.brush-colour {
  text-align: center;
  margin-bottom: 0.5rem;
  font-size: 2rem;
  border: 3px solid black;
  border-radius: 10px;
}

.colour-selector {
  width: 70px;
  height: 70px;
  align-self: center;
  border: 3px solid black;
  border-radius: 8px;
  margin-bottom: 0.3rem;
  cursor: pointer;
}

.instructions {
  text-align: center;
  margin-bottom: 2rem;
}

button {
  margin-bottom: 1rem;
  height: 45px;
  cursor: pointer;
  border: 3px solid black;
  border-radius: 10px;
  font-size: 0.9rem;
}

body {
  margin: 0;
}

